# fyrox_scripting

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  backlog.md  build_book.sh  cs_editor.sh  cs_guards_play.sh  custom.js  dylib_issue.sh  editor_cs.sh  editor_lua.sh  fyrox_cs.sh  get_std_dll.sh  guards_cs.sh  guide_cs.md  guide_lua.md  index.html  install_sdk_cs.sh  install_sdk_lua.sh  introduction.html  known_issues.md  lua_guards_play.sh  os.sh  play_guards_lua.sh  print.html  scripting_api_cs.html  searchindex.js  stub_fyrox_cs.html  stub_fyrox_lua.html  toc.html  toc.js  vanilla_guards_editor.sh  vanilla_guards_play.sh
.cargo/: config.toml
.github/workflows/: check_codegen.yml  debug_001.yml  deploy.yml  publish.yml  publish_linux.yml
api/fyrox-lite/: Cargo.toml
api/fyrox-lite-auto/: Cargo.toml
api/fyrox-lite-color/: Cargo.toml
api/fyrox-lite-math/: Cargo.toml
api/fyrox-lite-math/src/: domain.json  lib.rs  lite_math.rs
api/fyrox-lite/src/: domain.json  externalizable.rs  global_script_object.rs  global_script_object_residence.rs  lib.rs  lite_color.rs  lite_ctx.rs  lite_input.rs  lite_log.rs  lite_math.rs  lite_node.rs  lite_physics.rs  lite_plugin.rs  lite_prefab.rs  lite_scene.rs  lite_script.rs  lite_ui.rs  lite_window.rs  resource_registry.rs  script_context.rs  script_failure.rs  script_metadata.rs  script_object.rs  script_object_fyrox_traits.rs  script_object_residence.rs  spi.rs
bash/: all_build_editor.sh  book_build.sh  cs_editor.sh  cs_guards_play.sh  cs_install_sdk.sh  cs_package.sh  cs_publish.sh  lua_editor.sh  lua_install_sdk.sh  lua_package.sh  lua_play_guards.sh  lua_publish.sh  publish.sh  vanilla_guards_editor.sh  vanilla_guards_play.sh
bash/utils/: do_package.sh  do_publish.sh  os.sh
book/: .gitignore
cs/: editor.sh
cs/App01/: FyroxC.cs
cs/fake_cs/: Cargo.toml
cs/fyrox-c/: Cargo.toml
cs/fyrox-c-lib/: Cargo.toml
cs/fyrox-c-lib/src/: auto_dispose.rs  bindings_lite_2.rs  bindings_manual.rs  c_lang.rs  external_script_proxy.rs  fyrox_c_plugin.rs  internal_auto.rs  invoke_callback.rs  lib.rs  scripted_app.rs  user_script_impl.rs
cs/fyrox-c-loader/: Cargo.toml
cs/fyrox-lite-cs/: Cargo.toml
cs/fyrox-lite-cs-lib/: Cargo.toml
cs/fyrox-lite-cs-lib/src/: bindings_lite_2.rs  c_lang.rs  errors.rs  fyrox_c_plugin.rs  scripted_app.rs  user_script_impl.rs
cs/fyroxed-c/: Cargo.toml
cs/fyroxed-c/src/: editor_cs.rs  lib.rs  template.csproj.txt
cs/fyroxed-cs/: Cargo.toml
cs/fyroxed-cs/src/: editor_cs.rs  fyrox_c_loader.rs  template.csproj.txt
docs/src/: SUMMARY.template.md  scripting_api_cs.md
dylib_issue/agent/: Cargo.toml
dylib_issue/invoker/: Cargo.toml
fyrox-lite/: Cargo.toml
fyrox-lite-color/: Cargo.toml
fyrox-lite-color/src/: domain.json
fyrox-lite-math/src/: domain.json  lite_math.rs
fyrox-lite/src/: domain.json  global_script_object.rs  lite_node.rs  lite_plugin.rs  script_metadata.rs  script_object.rs  script_object_fyrox_traits.rs  script_object_residence.rs
fyrox_cs/: 404.html  index.html  introduction.html  print.html  scripting_api.html  searchindex.js  toc.html  toc.js
fyrox_cs/scripting_api/: Color.html  Input.html  Log.html  Math.html  Node.html  Physics.html  Plugin.html  Prefab.html  Scene.html  Script.html  UI.html  Window.html
fyrox_lua/: 404.html  index.html  introduction.html  print.html  scripting_api.html  searchindex.js  toc.html  toc.js
fyrox_lua/scripting_api/: Color.html  Input.html  Log.html  Math.html  Node.html  Physics.html  Plugin.html  Prefab.html  Scene.html  Script.html  UI.html  Window.html
generated-docs/: README.md
internal/gen-common/: Cargo.toml
internal/gen-common/src/: by_package.rs  code_model.rs  context.rs  doc.rs  fmt.rs  lib.rs  methods.rs  properties.rs  templating.rs
internal/md-gen-lib/: Cargo.toml
internal/md-gen-lib/examples/: csharp_docs.rs  generate_cs_defined_domain.rs
internal/md-gen-lib/src/: generate_md.rs  lib.rs
internal/md-gen-lib/src/md/: cs_to_domain.rs  csharp_docs.rs  csharp_metamodel.rs  engine_class.rs  enum_class.rs  mod.rs  sections.rs  struct_class.rs  type_to_md.rs
langs/cs/csgen-lib/: Cargo.toml
langs/cs/csgen-lib/src/: lib.rs  rust_decl_to_cs.rs
langs/cs/csgen-lib/src/lite_cgen/: engine_class.rs  enum_class.rs  mod.rs  struct_class.rs  types.rs
langs/cs/csgen-lib/src/lite_csgen/: api_types.rs  doc.rs  engine_class.rs  enum_class.rs  gen_rs.rs  mod.rs  struct_class.rs  wrappers.rs  write_cs.rs
langs/cs/fyrox-lite-cs/: Cargo.toml  install.sh
langs/cs/fyrox-lite-cs-lib/: Cargo.toml
langs/cs/fyrox-lite-cs-lib/src/: arena.rs  auto_dispose.rs  bindings_lite_2.rs  bindings_manual.rs  buffer.rs  c_lang.rs  errors.rs  external_global_script_proxy.rs  external_script_proxy.rs  fyrox_c_plugin.rs  internal_auto.rs  lazy_watcher.rs  lib.rs  native_utils.rs  scripted_app.rs  string.rs  user_script_impl.rs  utils.rs
langs/cs/fyrox-lite-cs/src/: executor_cs.rs  lib.rs
langs/cs/fyroxed-cs/: Cargo.toml  build.rs  install.sh
langs/cs/fyroxed-cs/src/: Debug.run.xml.txt  Game.cs.txt  Program.cs.txt  ask_user_for_project_directory.rs  editor_cs.rs  fyrox_lite_editor_run.rs  lib.rs  prepare_project_directory.rs  template.csproj.txt  template.gitignore.txt  template.sln.txt
langs/lua/fyrox-lite-lua/: Cargo.toml
langs/lua/fyrox-lite-lua/src/: main.rs
langs/lua/fyroxed-lua/: Cargo.toml  build.rs  fyrox_lua_003.pdn  icon.rc
langs/lua/fyroxed-lua/src/: Game.lua.txt  main.rs  template.gitignore.txt
scripting_api_cs/: LiteInput.html  LiteLog.html  LiteMath.html  LiteNode.html  LitePhysics.html  LitePlugin.html  LitePrefab.html  LiteScene.html  LiteUi.html  LiteWindow.html
sdk_cs/: custom.js  index.html  print.html  scripting_api.html  searchindex.js  toc.html  toc.js
sdk_lua/: 404.html  index.html  print.html  scripting_api.html  searchindex.js  toc.html  toc.js
showcase/guards_vanilla/editor/: Cargo.toml
showcase/guards_vanilla/executor/: Cargo.toml
showcase/guards_vanilla/executor/src/: main.rs
showcase/guards_vanilla/game-dylib/: Cargo.toml
tools/: Cargo.toml
www/: .gitignore  book.toml
(+780 files in other folders)
