
[workspace]
members = [
	"lua/editor-lua",
	"lua/executor-lua",
	"lua/luagen-lib",
	"lua/fyrox-lua",
	"fyrox-lite",
	"lite-macro",
	"lite-macro-lib",
	"fyrox-lite-math",
	"fyrox-lite-color",
	"lite-model",
	"lite-parser",
	"tools",
	"cs/fyrox-lite-cs",
	"cs/csgen-lib",
	"gen-common",
	"cs/fyrox-lite-cs-lib",
	"cs/fyroxed-cs",
]
resolver = "2"
exclude = ["mlua"]

[workspace.dependencies]
luagen-lib = { path = "lua/luagen-lib" }
fyrox-lua = { path = "lua/fyrox-lua"}
fyrox-lite-cs = { path = "cs/fyrox-lite-cs" }
fyrox-lite-cs-lib = { path = "cs/fyrox-lite-cs-lib"}
csgen-lib = { path = "cs/csgen-lib" }
fyrox-lite = {path = "fyrox-lite", default-features = false}
fyrox-lite-math = {path = "fyrox-lite-math", default-features = false}
fyrox-lite-color = {path = "fyrox-lite-color", default-features = false}
lite-model = { path = "lite-model" }
lite-parser = { path = "lite-parser" }
lite-macro = { path = "lite-macro" }
gen-common = { path = "gen-common" }

# fyrox = { git = "https://github.com/FyroxEngine/Fyrox", default-features = false }
# fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", default-features = false }
# fyrox = {path = "engine/fyrox", default-features = false}
# fyroxed_base = {path = "engine/editor", default-features = false}
fyrox = {version = "0.36.2", default-features = false}
fyroxed_base = {version = "0.36.2", default-features = false}

serde = "1.0.210"
serde_json = "1.0.128"
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
uuid = { version = "1.10.0", features = ["v4"] }

extend = "1.2.0"
convert_case = "0.6.0"
to_vec = "0.1.0"
mlua = { version = "0.9.1", features = ["luau"] }
# mlua = { path = "../mlua", features = ["luau"] }
itertools = "0.13.0"
send_wrapper = "0.6.0"

# Separate build profiles for hot reloading. These profiles ensures that build artifacts for
# hot reloading will be placed into their own folders and does not interfere with standard (static)
# linking.
[profile.dev-hot-reload]
inherits = "dev"
[profile.release-hot-reload]
inherits = "release"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
