
[workspace]
members = [
	"api/fyrox-lite",
	"api/fyrox-lite-math",
	"api/fyrox-lite-color",
	"internal/lite-macro",
	"internal/lite-macro-lib",
	"internal/lite-model",
	"internal/lite-parser",
	"internal/gen-common",
	"internal/error",
	"internal/ask_user",
	"langs/cs/csgen-lib",
	"langs/cs/fyrox-lite-cs",
	"langs/cs/fyrox-lite-cs-lib",
	"langs/cs/fyroxed-cs",
	"langs/lua/fyrox-lite-lua",
	"langs/lua/fyrox-lite-lua-lib",
	"langs/lua/fyroxed-lua",
	"langs/lua/luagen-lib",
	"showcase/guards_vanilla/editor",
	"showcase/guards_vanilla/executor",
	"showcase/guards_vanilla/game",
	"showcase/guards_vanilla/game-dylib",
	"tools",
]
resolver = "2"
exclude = [
	# to workaround "rust-lld: error: too many exported symbols (got 95799, max 65535)"
	"engine",
]

[workspace.dependencies]
luagen-lib = { path = "langs/lua/luagen-lib" }
fyrox-lite-lua-lib = { path = "langs/lua/fyrox-lite-lua-lib" }
fyrox-lite-cs = { path = "langs/cs/fyrox-lite-cs" }
fyrox-lite-cs-lib = { path = "langs/cs/fyrox-lite-cs-lib" }
csgen-lib = { path = "langs/cs/csgen-lib" }
fyrox-lite = {path = "api/fyrox-lite", default-features = false}
fyrox-lite-math = {path = "api/fyrox-lite-math", default-features = false}
fyrox-lite-color = {path = "api/fyrox-lite-color", default-features = false}
lite-model = { path = "internal/lite-model" }
lite-parser = { path = "internal/lite-parser" }
lite-macro = { path = "internal/lite-macro" }
gen-common = { path = "internal/gen-common" }
error = { path = "internal/error" }
ask_user = { path = "internal/ask_user" }

#fyrox = { git = "https://github.com/FyroxEngine/Fyrox", default-features = false }
#fyroxed_base = { git = "https://github.com/FyroxEngine/Fyrox", default-features = false }
#fyrox-build-tools = { git = "https://github.com/FyroxEngine/Fyrox", default-features = false }
fyrox = {path = "engine/fyrox", default-features = false}
fyroxed_base = {path = "engine/editor", default-features = false}
fyrox-build-tools = {path = "engine/fyrox-build-tools", default-features = false}
#fyrox = {version = "0.36.2", default-features = false}
#fyroxed_base = {version = "0.36.2", default-features = false}
#fyrox-build-tools = {version = "0.36.2", default-features = false}

serde = "1.0.210"
serde_json = "1.0.128"
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
uuid = { version = "1.10.0", features = ["v4"] }

extend = "1.2.0"
convert_case = "0.6.0"
to_vec = "0.1.0"
mlua = { version = "0.9.1", features = ["luau"] }
# mlua = { path = "../mlua", features = ["luau"] }
itertools = "0.13.0"
send_wrapper = "0.6.0"

# Separate build profiles for hot reloading. These profiles ensures that build artifacts for
# hot reloading will be placed into their own folders and does not interfere with standard (static)
# linking.
[profile.dev-hot-reload]
inherits = "dev"
[profile.release-hot-reload]
inherits = "release"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
