[package]
name = "fyrox-lite-color"
description = "Optional package for language bindings. Useful if language doesn't have efficient enough type for a color"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox-lite = { workspace = true }
fyrox = { workspace = true }
lite-macro = { workspace = true }

[features]
default = ["fyrox-lite/default", "fyrox/default"]
engine-dylib = ["fyrox-lite/engine-dylib", "fyrox/dylib"]
