[package]
name = "fyrox-lite-math"
description = "Optional package for language bindings. Useful if language doesn't have powerful enough math libraries"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox-lite = { workspace = true, default-features = false }
fyrox = { workspace = true, default-features = false }
lite-macro = { workspace = true }
lite-runtime = { workspace = true }

[features]
default = ["fyrox-lite/default", "fyrox/default"]
engine-dylib = ["fyrox-lite/engine-dylib", "fyrox/dylib"]