[package]
name = "fyrox-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
extend = "1.2.0"
lite-macro = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
native-dialog = { workspace = true }

[features]
default = ["fyrox/default"]
engine-dylib = ["fyrox/dylib"]