[package]
name = "fyrox-c-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true , features = ["dylib"], default-features = false }
fyrox-lite = { workspace = true , features = ["dylib"], default-features = false}
extend = { workspace = true }
to_vec = { workspace = true }
convert_case = { workspace = true }
send_wrapper = { workspace = true }
