[package]
name = "fyroxed-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyroxed_base = { workspace = true, features = ["dylib_engine"], default-features = false }
fyrox = { workspace = true, features = ["dylib"], default-features = false }
fyrox-c-loader = { workspace = true }
native-dialog = "0.9.0"
