[package]
name = "gen-common"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
extend = { workspace = true }
convert_case = { workspace = true }
to_vec = { workspace = true }
itertools = { workspace = true }
pulldown-cmark = "0.13.0"
xml = "0.8.20"
