[package]
name = "csgen-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
lite-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
extend = { workspace = true }
convert_case = { workspace = true }
to_vec = { workspace = true }
itertools = { workspace = true }
gen-common = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 ={ workspace = true }
pulldown-cmark = "0.13.0"
#quick-xml = "0.37.5"
xml = "0.8.20"
