[package]
name = "fyrox-lite-cs-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true, default-features = true }
fyrox-lite = { workspace = true, default-features = true }
lite-runtime = { workspace = true }
extend = { workspace = true }
to_vec = { workspace = true }
convert_case = { workspace = true }
send_wrapper = { workspace = true }
error = { workspace = true }
bitflags = "2.9.1"
itertools = { workspace = true }
