[package]
name = "fyrox-lite-cs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyrox = { workspace = true, default-features = true }
fyrox-lite-cs-lib = { workspace = true, default-features = true }
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }

[features]
profiling = ["dep:puffin", "dep:puffin_http"]
