[package]
name = "fyroxed-cs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fyroxed_base = { workspace = true, default-features = true }
fyrox = { workspace = true }
fyrox-build-tools = { workspace = true }
fyrox-lite-cs-lib = { workspace = true }
fyrox-lite = { workspace = true }
lite-runtime = { workspace = true }
native-dialog = { workspace = true }
ask_user = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dunce = "1.0.5"

[build-dependencies]
to_ico = { workspace = true }
