[package]
name = "fyrox-lite-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyrox-lite-lua-lib = { workspace = true, optional = true }
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }

[features]
default = ["fyrox-lite-lua-lib"]
dylib = ["fyrox/dylib"]
profiling = ["dep:puffin", "dep:puffin_http"]
