[package]
name = "fyrox_lite_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyrox-lite-lua-lib = { workspace = true }
fyrox-lite = { workspace = true }
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }

[features]
profiling = ["dep:puffin", "dep:puffin_http"]
