
[package]
name = "fyroxed-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
fyrox-lite-lua-lib = { workspace = true, optional = true}

[features]
default = ["fyrox-lite-lua-lib", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
