[package]
name = "fyroxed_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
fyrox-build-tools = { workspace = true }
fyrox-lite-lua-lib = { workspace = true }
lite-runtime = { workspace = true }
dunce = "1.0.5"
ask_user = { workspace = true }
comprexor = "0.1.520"

[build-dependencies]
embed-resource = "3.0"
to_ico = { workspace = true }