
[package]
name = "guards-vanilla-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
guards-vanilla-game = { path = "../game", optional = true }

[features]
default = ["guards-vanilla-game", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
