
[package]
name = "guards-vanilla-game_dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
guards-vanilla-game = { path = "../game", default-features = false }

[features]
default = ["guards-vanilla-game/default"]
dylib-engine = ["guards-vanilla-game/dylib-engine"]
